# dragonfly-mainframe

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .taplo.toml  .yamllint.yaml  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  changes.diff  compose-tests.yaml  compose.yaml  docker-compose-tests.yaml  docker-compose.yaml  entrypoint.sh  foo.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: container-build-push.yaml  docker-build-push.yaml  generate-migration-sql.yaml  image-build-push.yaml  lint-test.yaml  publish-docs.yaml  sentry-release.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 00171406f182_add_reported_by_field.py  0286cedeefc7_add_subscriptions_models.py  095a3873bec8_add_fail_reason_string_column.py  0ad8044bf4d5_initial.py  0c4e434fc0b6_one_to_many_package_to_rules.py  0dade8a4a303_adpated_the_scan_table_to_no_longer_.py  1bced040ba5a_make_client_id_nullable.py  2745a5bf4c97_store_commit_hash_in_scan.py  3f42e287fc2f_add_report_summary_and_reported_at_index.py  49f38c26141c_add_package_rules_pkey.py  5264b2894e56_add_score_and_most_malicious_file.py  56627251b8c0_make_datetimes_tz_aware.py  587c186d91ee_better_match_information.py  58fcd14830ae_drop_unneeded_columns.py  5e46ee8ec64f_add_queued_by_pending_by_and_finished_.py  6761c4a3421c_add_rules_primary_key.py  6991bcb18f89_add_rules_primary_key.py  6c8e52cd4f5f_add_download_urls_scan_id_index.py  6e1ee71402d0_many_to_many.py  7c8806e19b45_cache_download_url.py  883af2539440_rename_package_to_scan.py  94f1cd79b7d4_add_scans_finished_at_index.py  98de0cdba2c2_reported_at_timestamp.py  9ac5b6c4a36b_add_scans_status_index.py  9d70bac89aa5_add_composite_unique_constraint_to_name_.py  a62a93704798_add_distributions.py  af5a0e26c976_add_apiclient_table.py  b053c5bacf42_add_inspector_url_column.py  b5ec215f4679_.py  b5ec215f4679_add_remaining_columns.py  ba3662b96099_initial.py  c3f59638859f_make_queued_at_optional.py  d4c81f4086ce_store_rules_in_database.py  ea1e83d44157_added_finished_at_column_to_scans.py  eeaa78a7260e_add_package_rules_pkey.py  f0128b83ecef_make_datetimes_tz_aware.py
docs/source/: changelog.rst  conf.py  database_schema.rst  index.rst
logging/: development.toml  production.toml
src/: __main__.py  logger.toml  models.py
src/mainframe/: __init__.py  __main__.py  access_token.py  auth.py  authorization_header_elements.py  constants.py  custom_exceptions.py  database.py  dependencies.py  greylist.py  job_cache.py  json_web_token.py  logfire.py  metrics.py  models.py  pypi.py  pypi_client.py  receiver.py  rules.py  server.py
src/mainframe/endpoints/: __init__.py  auth.py  job.py  model.py  package.py  report.py  rules.py  scans.py  stats.py  subscriptions.py  suppression.py
src/mainframe/models/: __init__.py  orm.py  schemas.py
src/mainframe/utils/: __init__.py  mailer.py  microsoft.py  pypi.py
src/utils/: microsoft.py  pypi.py
tests/: conc_read.py  conftest.py  test_auth.py  test_database.py  test_dbconfig.py  test_job.py  test_job_cache.py  test_json_web_token.py  test_main.py  test_package.py  test_pypi.py  test_report.py  test_rules.py  test_scans.py  test_stats.py  test_subscriptions.py
tests/test_data/: __init__.py  first_safe_second_malicious.json  first_safe_second_malicious.py  sample.json  sample.py
tests/utils/: test_pypi.py
